Added Finding Game view and JS handlers

--- a/SnakeHTML/index.html
+++ b/SnakeHTML/index.html
@@ -71,6 +71,10 @@
       <button class="joinGameButton" id="joinGameButton">Join Custom Game</button><br />
     </div>
     <!--Game Panel-->
+    <!--Find Game Page-->
+    <div class="findGamePage" id="findGamePage">
+      <p class="findingGame" id="findingGame">Finding Game...</p>
+    </div>
   </div>
 </body>
 </html>
